Viewport Optix Denoiser is available when Cycles Render Device is set to None/CUDA, leading to a crash #80477

Closed
opened 2020-09-04 19:31:56 +02:00 by marcuspollio · 26 comments
Member

Hi there !

System Information
Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1050 Ti with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-03 20:57, hash: a96283ba51
Worked: (newest version of Blender that worked as expected)

Short description of error
The option to choose the Viewport Denoiser in the Render Properties shows Optix in the dropdown menu, even though the Cycles Render Device in the System Preferences in set to "None" or "CUDA". Choosing the Optix Viewport Denoiser and going to Rendered mode crashes Blender

Exact steps for others to reproduce the error

  • Start Blender with defaults (Cycles Render Device to None or CUDA).
  • In the Render Properties editor, change the Engine to Cycles.
  • In the Denoising Sampling panel, activate the Viewport Denoiser. Automatic will be chosen.
  • Change the Viewport Shading to Rendered to be welcomed by a crash

Note that the crash occurs also when the Device in the Render Properties panel is set to GPU Compute.
Note that a Cycles Render Device to Optix and the Device to GPU Compute does not crash for me when choosing the Optix Denoiser in the Rendered Viewport Shading (as it should be hopefully).

system-info.txt

optix_denoise_crash.txt

denoise.jpg

Hi there ! **System Information** Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1050 Ti with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-03 20:57, hash: `a96283ba51` Worked: (newest version of Blender that worked as expected) **Short description of error** The option to choose the Viewport Denoiser in the Render Properties shows Optix in the dropdown menu, even though the Cycles Render Device in the System Preferences in set to "None" or "CUDA". Choosing the Optix Viewport Denoiser and going to Rendered mode crashes Blender **Exact steps for others to reproduce the error** - Start Blender with defaults (Cycles Render Device to None or CUDA). - In the Render Properties editor, change the Engine to Cycles. - In the Denoising Sampling panel, activate the Viewport Denoiser. Automatic will be chosen. - Change the Viewport Shading to Rendered to be welcomed by a crash Note that the crash occurs also when the Device in the Render Properties panel is set to GPU Compute. Note that a Cycles Render Device to Optix and the Device to GPU Compute does not crash for me when choosing the Optix Denoiser in the Rendered Viewport Shading (as it should be hopefully). [system-info.txt](https://archive.blender.org/developer/F8841326/system-info.txt) [optix_denoise_crash.txt](https://archive.blender.org/developer/F8841341/optix_denoise_crash.txt) ![denoise.jpg](https://archive.blender.org/developer/F8841342/denoise.jpg)
Author
Member

Added subscriber: @marcuspollio

Added subscriber: @marcuspollio

#81464 was marked as duplicate of this issue

#81464 was marked as duplicate of this issue

#81418 was marked as duplicate of this issue

#81418 was marked as duplicate of this issue

#81325 was marked as duplicate of this issue

#81325 was marked as duplicate of this issue

#80543 was marked as duplicate of this issue

#80543 was marked as duplicate of this issue

Added subscriber: @YAFU

Added subscriber: @YAFU

Optix Denoiser being available when Cycles Render Device is set to None/CUDA is correct behavior. However, I can confirm the crash following the above steps in a96283ba51 with CUDA/CPU and Optix denoiser. Linux, GTX 960 (450.66 driver)

Optix Denoiser being available when Cycles Render Device is set to None/CUDA is correct behavior. However, I can confirm the crash following the above steps in a96283ba511d with CUDA/CPU and Optix denoiser. Linux, GTX 960 (450.66 driver)

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @rjg

Added subscriber: @rjg

I can confirm this issue. I'm not entirely sure which project and tag is correct for this ticket, since there's an overlap between viewport, optix and cycles.

I can confirm this issue. I'm not entirely sure which project and tag is correct for this ticket, since there's an overlap between viewport, optix and cycles.
Member

Added subscribers: @pmoursnv, @lichtwerk

Added subscribers: @pmoursnv, @lichtwerk
Member

Can confirm that cf0ba59e31 is crashing for me as well (whereas 429afe0c62 was still fine)

**System Information**
Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100
version: 2.91.0 Alpha, branch: master, commit date: 2020-09-04 21:32, hash: `rBcf0ba59e311b`

Cannot bisect this atm, due to https://devtalk.blender.org/t/cuda-not-compiling , using builds from builder.blender.org.

CC @pmoursnv

Can confirm that cf0ba59e31 is crashing for me as well (whereas 429afe0c62 was still fine) ``` **System Information** Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 version: 2.91.0 Alpha, branch: master, commit date: 2020-09-04 21:32, hash: `rBcf0ba59e311b` ``` Cannot bisect this atm, due to https://devtalk.blender.org/t/cuda-not-compiling , using builds from builder.blender.org. CC @pmoursnv

Just a clarification. Crash not only happens in viewport, it also happens in final render with Optix denoiser. Under some circumstances the crash even occurs with Optix selected in Device settings. Anyway I guess this will be easily reproducible by the developers.

Just a clarification. Crash not only happens in viewport, it also happens in final render with Optix denoiser. Under some circumstances the crash even occurs with Optix selected in Device settings. Anyway I guess this will be easily reproducible by the developers.
Member

Added subscriber: @diegoblender

Added subscriber: @diegoblender

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Patrick Mours was assigned by Dalai Felinto 2020-09-08 14:05:33 +02:00

Hi Patrick, assigning this to you since it is a high priority issue. If you won't have the time to look at that please unassign and we see how to handle it.

Hi Patrick, assigning this to you since it is a high priority issue. If you won't have the time to look at that please unassign and we see how to handle it.
Patrick Mours removed their assignment 2020-09-08 15:36:13 +02:00
Stefan Werner was assigned by Patrick Mours 2020-09-08 15:36:13 +02:00
Member

Added subscriber: @Stefan_Werner

Added subscriber: @Stefan_Werner
Member

This is caused by 009971ba7a. Enabling OptiX denoising with CPU rendering creates an implicit multi-device in Cycles, which breaks Embree BVH building because the Embree device (BVHEmbree::rtc_device) is not initialized.
@Stefan_Werner I suppose the simplest solution would be to override Device::bvh_device() in MultiDevice as well and have it return the one from the first CPU device (as there should only be one anyway)? We also may want to streamline the Embree/OptiX BVH building at some point and make it more similar, but that's out of scope for this particular issue.

This is caused by 009971ba7a. Enabling OptiX denoising with CPU rendering creates an implicit multi-device in Cycles, which breaks Embree BVH building because the Embree device (`BVHEmbree::rtc_device`) is not initialized. @Stefan_Werner I suppose the simplest solution would be to override `Device::bvh_device()` in `MultiDevice` as well and have it return the one from the first CPU device (as there should only be one anyway)? We also may want to streamline the Embree/OptiX BVH building at some point and make it more similar, but that's out of scope for this particular issue.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Removing the EEVEE Viewport tag, as it doesn't seem to be related to the OpenGL/drawing side.

Removing the EEVEE Viewport tag, as it doesn't seem to be related to the OpenGL/drawing side.

This issue was referenced by 9f12ea496a

This issue was referenced by 9f12ea496a3f6a0a066e3ed6ec557cc9ec37d776
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Stefan Werner was unassigned by Patrick Mours 2020-09-15 14:59:51 +02:00
Patrick Mours self-assigned this 2020-09-15 14:59:51 +02:00
Author
Member

@pmoursnv Thanks Patrick !

@pmoursnv Thanks Patrick !
Member

Added subscriber: @iDro040

Added subscriber: @iDro040
Member

Added subscriber: @xavi17vlc

Added subscriber: @xavi17vlc
Member

Added subscriber: @JordanBlue-2

Added subscriber: @JordanBlue-2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80477
No description provided.